If scrollbar needed, make popup widget display it instead of popup wrapper. Partially reverts 4d1ddb9738c5a9af31092562211d8f0d4bec202c. Fixes #266.

--- a/themes/ios/common.css
+++ b/themes/ios/common.css
@@ -34,13 +34,20 @@
   margin: 0;
   border: 0;
   padding: 0;
-  -webkit-overflow-scrolling: touch;
   -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+.d-popup > * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: inherit;
+  width: inherit;
+  overflow: auto;
 }
 .d-tooltip-dialog-popup {
   -webkit-box-shadow: none;
